[package]
name = "ethers-erc20balances"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.71"
auto_impl = "1.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.172"